--- a/cosy.tex
+++ b/cosy.tex
@@ -622,7 +622,7 @@ may appear and a satisfiable problem become unsatisfiable.
 With the same variable ordering, swapping the value thus, $\true < \false$ or $\false < \true$
 may impact drastically the performance of the solver.
 
-To illustrate it, we execute \texit{hole100}, the pigeonhole problem with 100 holes and 101 pigeons with 
+To illustrate it, we execute \textit{hole100}, the pigeonhole problem with 100 holes and 101 pigeons with 
 the increase order and change only the sign.
 With  $\false < \true$, the solver generates 20\,619 ESBP and takes 13.8 seconds to solve it.
 With the inverse order, $\true < \false$, it generates 33\,263 ESBP ans solve it in 93.4 seconds.
